# fishai-server

./: Cargo.toml  README.md
src/: api.rs  bench.rs  lib.rs  main.rs  model.rs  quantize.rs  tokenizer.rs
