[package]
name = "fishai-engine"
version = "3.0.0"
edition = "2021"
description = "FishAI v3 — FishLab-ai 自研 GPT 推理引擎，Rust 编写，KV Cache + 真流式 + BPE 分词 + 群组量化"
authors = ["FishLab-ai"]
license = "MIT"

[dependencies]
# Web 框架
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"

# 分词器 — HuggingFace tokenizers (proper BPE)
tokenizers = "0.21"

# 高效矩阵运算
ndarray = "0.16"

# 随机数
rand = "0.8"
rand_distr = "0.4"

# 日志
tracing = "0.1"
tracing-subscriber = "0.3"

# 二进制序列化
bincode = "1"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
